<?xml version="1.0"?>
<package>
  <name>btr_ball_detector</name>
  <version>0.0.0</version>
  <description>
        This package implements a circle-like shape detector of the input image.
        It requires and input image and publish, at frame rate, a marked image
        and a stamped array of circle centers and radius.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="andreu@beta-robots.com">Andreu Corominas Murtra</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <url type="website">http://www.beta-robots.com</url>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <author email="andreu@beta-robots.com">Andreu Corominas Murtra</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>  
  <build_depend>sensor_msgs</build_depend>  
  <build_depend>geometry_msgs</build_depend>  
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>  
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>  

</package>