<?xml version="1.0"?>
<package>
  <name>robotis_example</name>
  <version>0.1.0</version>
  <description>The robotis_example package</description>

  <maintainer email="zerom@robotis.com">ROBOTIS</maintainer>


  <license>GPLv2</license>


  <!-- <url type="website">http://wiki.ros.org/robotis_example</url> -->


  <author email="zerom@robotis.com">ROBOTIS</author> -->


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>robotis_controller</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>robotis_controller</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>